Xây dựng giao diện header phần 1

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -2,11 +2,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root {
-    --primaryColorBg: #432275;
+    --primaryColorBg: #170f23;
+    --sidebarColorBg: #ffffff0d;
+    --playControlBg: #120c1c;
+    --font-family: Inter, 'sans-serifInter';
+    --search-height: 40px;
+    --search-border-radius: 20px;
 }
 
 * {
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 html {
     font-size: 62.5%;
@@ -17,4 +24,15 @@ body {
     font-size: 1.6rem;
     line-height: 1.5rem;
     text-rendering: optimizeSpeed;
+}
+button,
+input,
+[tabindex],
+textarea {
+    outline: none;
+    border: none;
+}
+a {
+    color: var(--text-color);
+    text-decoration: none;
 }
