--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -4,6 +4,7 @@
 :root {
     --primaryColorBg: #170f23;
     --sidebarColorBg: #ffffff0d;
+    --popperBg: #432275;
     --playControlBg: #120c1c;
     --font-family: Inter, 'sans-serifInter';
     --search-height: 40px;
@@ -24,6 +25,21 @@ body {
     font-size: 1.6rem;
     line-height: 1.5rem;
     text-rendering: optimizeSpeed;
+}
+//scrollbar CSS
+html *::-webkit-scrollbar {
+    border-radius: 0;
+    width: 8px;
+}
+
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.15);
+}
+
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
 }
 button,
 input,
