--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -35,3 +35,72 @@
     font-size: 2rem;
     color: #eee;
 }
+//Popper
+.search-popper {
+    // width: 100%;
+    // min-width: 340px;
+    // max-width: 540px;
+
+    width: 540px;
+    height: 220px;
+    .search {
+        background-color: var(--popperBg);
+    }
+    input {
+        position: absolute;
+        top: 0;
+        left: 38px;
+        right: 10px;
+        bottom: 0;
+        height: 100%;
+        padding-right: 40px;
+        font-size: 1.4rem;
+        padding: 5px 0;
+        flex: 1;
+        outline: none;
+        color: #eee;
+        line-height: 4rem;
+    }
+}
+
+.search-result {
+    width: 100%;
+    height: 164px;
+    padding: 13px 10px;
+    overflow: auto;
+}
+.result-list {
+    overflow: hidden;
+}
+
+.search-tittle {
+    font-size: 1.5rem;
+    font-weight: 700;
+    padding: 0 10px 8px;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+}
+
+.search-item {
+    display: flex;
+    border-radius: 4px;
+    padding: 8px 10px;
+    line-height: 2rem;
+    overflow: hidden;
+    cursor: pointer;
+    align-items: center;
+    &:hover {
+        background-color: #ffffff1a;
+    }
+}
+.icon-chart {
+    font-size: 1.4rem;
+    color: #ffffff80;
+    margin-right: 10px;
+}
+
+.tittle-item {
+    font-size: 1.4rem;
+    color: #fff;
+}
