Xử lý giao diện phần sidebar p1

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -9,6 +9,7 @@
     --font-family: Inter, 'sans-serifInter';
     --search-height: 40px;
     --search-border-radius: 20px;
+    --purple-primary: #7200a1;
 }
 
 * {
