--- a/src/layouts/components/Sidebar/Sidebar.module.scss
+++ b/src/layouts/components/Sidebar/Sidebar.module.scss
@@ -46,7 +46,7 @@
     position: fixed;
     left: 0;
     overflow: auto;
-    height: 260px;
+    height: 240px;
     .login-discover {
         text-align: center;
         padding: 15px 8px;
@@ -92,5 +92,26 @@
             color: #000;
             text-transform: uppercase;
         }
+    }
+}
+.add-new-playlist {
+    position: fixed;
+    bottom: 90px;
+    width: 240px;
+    background-color: var(--primaryColorBg);
+    height: 62px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .add-playlist-btn {
+        background-color: transparent;
+        width: 100%;
+        height: 100%;
+        color: #fff;
+        font-weight: 700;
+        border-top: 1px solid #ffffff1a;
+        padding: 0 28px;
+        display: flex;
+        justify-content: space-evenly;
     }
 }
