--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -10,6 +10,10 @@
     --search-height: 40px;
     --search-border-radius: 20px;
     --purple-primary: #7200a1;
+    --text-primary: #fff;
+    --top-1-color: #4a90e2;
+    --top-2-color: #27bd9c;
+    --top-3-color: #e35050;
 }
 
 * {
