--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -34,7 +34,7 @@
     min-height: 100%;
     width: 100%;
     margin-top: 70px;
-    height: 3000px;
+    min-height: 1000px;
 }
 
 .play-control {
