--- a/src/layouts/components/PlayerControl/components/SongControl/SongControl.module.scss
+++ b/src/layouts/components/PlayerControl/components/SongControl/SongControl.module.scss
@@ -19,6 +19,9 @@
     font-size: 1.5rem;
     color: #fff;
 }
+.icon.loop {
+    color: var(--purple-primary);
+}
 .range {
     width: 100%;
     display: flex;
