--- a/src/components/Section/SectionItem/SectionItem.module.scss
+++ b/src/components/Section/SectionItem/SectionItem.module.scss
@@ -1,18 +1,40 @@
 .section-item {
     max-width: 20%;
     padding: 0 12px;
+    flex-shrink: 0;
 }
 .section-thumb {
     width: 100%;
     overflow: hidden;
     cursor: pointer;
-    border-radius: 4px;
+    margin-bottom: 2px;
+    border-radius: 8px;
+    position: relative;
+    &:hover {
+        .image-section-item {
+            transform: scale(1.1);
+        }
+        .play-icon {
+            display: block;
+        }
+    }
 }
-
+.play-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 40px;
+    height: 40px;
+    color: #fff;
+    border-radius: 50%;
+    display: none;
+}
 .image-section-item {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: all 0.3s linear;
 }
 
 .section-information {
@@ -21,4 +43,29 @@
 
 .title {
     color: #fff;
+    font-size: 1.4rem;
+    line-height: 2rem;
+    margin: 8px 0 4px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    &:hover {
+        color: var(--purple-primary);
+    }
+}
+
+.description {
+    font-size: 1.4rem;
+    line-height: 2rem;
+    font-weight: 400;
+    color: #ffffff80;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
+    white-space: nowrap;
 }
