--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -32,10 +32,11 @@
 
 .content {
     position: relative;
-    min-height: 100%;
     width: 100%;
+    min-height: 100%;
+    overflow-x: hidden;
     margin-top: 70px;
-    min-height: 1000px;
+    margin-bottom: 90px;
 }
 
 .play-control {
