Loading Page , label vip for song vip

--- a/src/components/SongItem/SongItem.module.scss
+++ b/src/components/SongItem/SongItem.module.scss
@@ -144,6 +144,10 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+.vip-label {
+    margin-left: 8px;
+    opacity: 0.4;
+}
 
 .song-artists {
     line-height: 1.2rem;
