--- a/src/layouts/components/PlayerControl/components/SongInformation/SongInformation.module.scss
+++ b/src/layouts/components/PlayerControl/components/SongInformation/SongInformation.module.scss
@@ -39,4 +39,10 @@
     margin-top: 1px;
     color: #ffffff80;
     font-size: 1.4rem;
+    display: flex;
+    align-items: center;
+}
+.live-label {
+    margin-right: 4px;
+    margin-bottom: -2px;
 }
