--- a/src/components/Section/SectionItem/SectionItem.module.scss
+++ b/src/components/Section/SectionItem/SectionItem.module.scss
@@ -3,6 +3,19 @@
     padding: 0 12px;
     flex-shrink: 0;
 }
+.section-item.topic {
+    max-width: 25%;
+    position: relative;
+    .section-information {
+        position: absolute;
+        top: 16%;
+        left: 20px;
+    }
+    .title {
+        text-transform: uppercase;
+        font-size: 1.8rem;
+    }
+}
 .section-thumb {
     width: 100%;
     overflow: hidden;
@@ -68,4 +81,19 @@
     text-overflow: ellipsis;
     display: block;
     white-space: nowrap;
+}
+.subimage {
+    display: flex;
+    margin-top: 8px;
+    position: absolute;
+    top: 50%;
+    left: 8px;
+}
+.image {
+    width: 20%;
+    height: 100%;
+    border-radius: 4px;
+    border: 1px solid transparent;
+    overflow: hidden;
+    margin-right: 3px;
 }
