--- a/src/pages/Radio/Radio.module.scss
+++ b/src/pages/Radio/Radio.module.scss
@@ -15,6 +15,7 @@
     width: 200px;
     padding: 0 12px;
     margin-bottom: 20px;
+    position: relative;
 }
 .radio-channel.radio-playing {
     .icon {
@@ -58,6 +59,12 @@
     font-weight: 100;
     display: none;
 }
+.live-label {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 170px;
+}
 
 .radio-information {
     margin-top: 20px;
@@ -77,4 +84,14 @@
     font-weight: 400;
     line-height: 2.2rem;
     color: #ffffff80;
+}
+.channel-thumb {
+    width: 48px;
+    height: 48px;
+    position: absolute;
+    top: 120px;
+    right: 20px;
+    border-radius: 50%;
+    overflow: hidden;
+    border: 1px solid #000;
 }
