--- a/src/components/Section/Section.module.scss
+++ b/src/components/Section/Section.module.scss
@@ -15,6 +15,9 @@
     position: relative;
     display: flex;
 }
+.section-list.topic {
+    flex-wrap: wrap;
+}
 .section-list.vertical {
     display: flex;
     flex-wrap: wrap;
