--- a/src/components/Section/SectionItem/SectionItem.module.scss
+++ b/src/components/Section/SectionItem/SectionItem.module.scss
@@ -1,11 +1,14 @@
 .section-item {
     max-width: 20%;
-    padding: 0 12px;
+    padding: 0 14px;
     flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
 }
 .section-item.topic {
     max-width: 25%;
     position: relative;
+    margin-bottom: 10px;
     .section-information {
         position: absolute;
         top: 16%;
@@ -16,6 +19,25 @@
         font-size: 1.8rem;
     }
 }
+.section-item.category {
+    margin-top: 20px;
+    .section-thumb {
+        flex-grow: 0;
+    }
+    .title {
+        margin: 0 0 4px;
+    }
+    .artist {
+        font-size: 1.4rem;
+        line-height: 1.8rem;
+        overflow: hidden;
+        height: 36px;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+        display: -webkit-box;
+        color: #ffffff80;
+    }
+}
 .section-thumb {
     width: 100%;
     overflow: hidden;
@@ -23,6 +45,7 @@
     margin-bottom: 2px;
     border-radius: 8px;
     position: relative;
+    flex-grow: 1;
     &:hover {
         .image-section-item {
             transform: scale(1.1);
