--- a/src/pages/Category/Category.module.scss
+++ b/src/pages/Category/Category.module.scss
@@ -15,4 +15,50 @@
     border-radius: 12px;
 }
 .content {
+    width: 100%;
+}
+.show-hide-btn {
+    margin-top: 8px;
+    width: 100%;
+    text-align: center;
+}
+.btn {
+    color: #fff;
+    font-size: 1.2rem;
+    background-color: transparent;
+    margin-top: 20px;
+}
+
+// Category Item
+
+.category-item {
+    width: 100%;
+}
+
+.cover {
+    width: 100%;
+    position: relative;
+}
+.blur {
+    width: 100%;
+    height: 50%;
+    &::before {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 50%;
+        background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(23, 15, 35, 1) 99.52%);
+    }
+}
+.cover-image {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.detail-container {
+    width: 100%;
 }
