--- a/src/components/Section/SectionItem/SectionItem.module.scss
+++ b/src/components/Section/SectionItem/SectionItem.module.scss
@@ -4,6 +4,7 @@
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
+    margin-bottom: 24px;
 }
 .section-item.topic {
     max-width: 25%;
@@ -75,6 +76,7 @@
 
 .section-information {
     margin-top: 8px;
+    min-height: 50px;
 }
 
 .title {
