Zing Chart Page p1

--- a/src/pages/NewMusic/NewMusic.module.scss
+++ b/src/pages/NewMusic/NewMusic.module.scss
@@ -25,7 +25,7 @@
 .play-btn {
     width: 40px;
     height: 40px;
-    background-color: #fff !important;
+    background-color: transparent !important;
     margin-left: 5px;
 }
 .play-icon {
