--- a/src/pages/ZingChart/ZingChart.module.scss
+++ b/src/pages/ZingChart/ZingChart.module.scss
@@ -42,3 +42,16 @@
     background-color: transparent !important;
     color: #fff;
 }
+.week-chart {
+    margin-top: 50px;
+    background-color: #201335e6;
+    padding: 40px 10px;
+    border-radius: 20px;
+    .header {
+        margin-left: 24px;
+    }
+}
+.week-chart-list {
+    margin-top: 20px;
+    display: flex;
+}
